--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>OptimizedHTML 5</title>
+	<title>dogxtension</title>
 	<meta name="description" content="dogxtension">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
@@ -14,7 +14,7 @@
 
 </head>
 
-<body id="ddd">
+<body>
 	<!-- CUSTOM HTML -->
 
 	<div id="page-preloader" class="preloader">
@@ -165,7 +165,7 @@
 			
 		</nav>
 	</header>
-	<section id="references" class="references movie" data-aos="fade-up">
+	<section id="references" class="references movie" data-aos="fade-in" >
 		<h2 class="h2">Filmy porównawcze</h2>
 		<div class="container">
 			<div class="row">
@@ -210,42 +210,46 @@
 		</div>
 		
 	</section>
-	<section id="photos" class="photos movie"   data-aos="fade-down">
+	<section id="photos" class="photos movie"   data-aos="fade-in">
 		<h2 class="h2">Zdjecia</h2>
 		<div class="container">
-			<div class="row">
-				<div class="m-p-g" >
-					<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350">
-						<img src="images/dest/gallery/1.jpg" data-full="images/dest/gallery/1.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-						<img src="images/dest/gallery/2.jpg" data-full="images/dest/gallery/2.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-						<img src="images/dest/gallery/3.jpg" data-full="images/dest/gallery/3.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-						<img src="images/dest/gallery/4.jpg" data-full="images/dest/gallery/4.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-						<img src="images/dest/gallery/5.jpg" data-full="images/dest/gallery/5.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-						<img src="images/dest/gallery/6.jpg" data-full="images/dest/gallery/6.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-						<img src="images/dest/gallery/7.jpg" data-full="images/dest/gallery/7.jpg" class="m-p-g__thumbs-img shadow" alt="portfolio"/>
-					</div>
+			
+			<div class="gallery_cont">
+				<a class="popupimg" href="images/dest/gallery/big/1.jpg">
+					<img src="images/dest/gallery/big/1.jpg">
+				</a>
+				<a class="popupimg" href="images/dest/gallery/big/2.jpg">
+					<img src="images/dest/gallery/big/2.jpg">
+				</a>
+				<a class="popupimg" href="images/dest/gallery/big/3.jpg">
+					<img src="images/dest/gallery/small/3.jpg">
+				</a>
+				<a class="popupimg" href="images/dest/gallery/big/4.jpg">
+					<img src="images/dest/gallery/small/4.jpg">
+				</a>
+				<a class="popupimg" href="images/dest/gallery/big/5.jpg">
+					<img src="images/dest/gallery/small/5.jpg">
+				</a>
+				<a class="popupimg" href="images/dest/gallery/big/6.jpg">
+					<img src="images/dest/gallery/small/6.jpg">
+				</a>
+				<a class="popupimg" href="images/dest/gallery/big/7.jpg">
+					<img src="images/dest/gallery/small/7.jpg">
+				</a>
 				
-					<div class="m-p-g__fullscreen"></div>
-				</div>
-			</div>
+				
+		 
+		 </div>
 		</div>
 	</section>
-	<section id="sizes" class="sizes movie" data-aos="fade-up">
+	<section id="sizes" class="sizes movie" data-aos="fade-in">
 		<h2 class="h2" >Pomiary</h2>
-		<p class="descr" >Metoda pobierania wymiarów:</p>
+		<p class="descr" >W sprawie pomiaru proszę o kontakt z producentem</p>
 		<div class="container">
-			<div class="size-img">
-				<img class="shadow"   src="images/dest/pomiar1pl.png" alt="pomiar1">
-				<img class="shadow"  src="images/dest/pomiar2.png" alt="pomiar1">
-			</div>
-			
+
 			<div class="size-inform">
-				<div class="col-md col-lg-6">
-					<div class="sizes-text-wrap" >
-						<p><samp class="big">W</samp>przypadku psa będącego w stanie zrobić kroki tylnymi łapami o własnych siłach (film porównawczy) potrzebny jest pomiar kroku tylnej łapy (rys.3)</p>
-					</div>
-				</div>
-				<div class="col-md col-lg-6">
+		
+				<div class="col-md col-lg-12">
 					<video controls>
 						<source src="video/7.mp4">
 					</video>
@@ -260,7 +264,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="opinie" class="opinie movie"  data-aos="fade-up">
+	<section id="opinie" class="opinie movie"  data-aos="fade-in">
 		<h2 class="h2" >Opinie</h2>
 		<div class="container">
 			<div class="splide">
@@ -296,7 +300,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="about" class="about movie" data-aos="fade-up">
+	<section id="about" class="about movie" data-aos="fade-in">
 		<h2 class="h2" >O nas</h2>
 		<div class="container">
 			<div class="row">
@@ -324,7 +328,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="contact" class="contact movie" data-aos="fade-up">
+	<section id="contact" class="contact movie"data-aos="fade-up">
 		<h2 class="h2">kontakt</h2>
 		<div class="container">
 			<div class="row">
